# project_in_advanced_robotics

./: .gitignore  3DPrintShapeCorner.ipt  3DPrintShapeCornerSimplified.ipt  3DPrintShapeStraightEdge1.ipt  3DPrintShapeStraightEdge1.stl  3DPrintShapeStraightEdge2.ipt  3DPrintShapeStraightEdge2.stl  3DPrintShapeStraightEdgeSimplified.ipt  DataGeneration.m  FinalAssemblyPointCloudSimplified.ply  FinalAssemblySimplified.iam  FinalAssemblySimplified.ipt  FinalAssemblySimplified.stl  Finalassembly.stl  InsertTest.ipt  InsertTest.stl  Plan.txt  Polishing_tool.stl  README.md  ScrewTest.ipt  areaEstimation.m  circleTranslation.avi  finalTestTrajectory.avi  hubPoints.ply  plate.ipt  plate.ply  plate.stl  platePoints.ply  wheelHubInside_v5.stl
Meetings/: Meeting1 22-02.docx  Meeting2 08-03.txt  meeting.txt
OldVersions/: 3DPrintShape.0002.ipt  3DPrintShape2.0003.ipt  3DPrintShapeCorner.0005.ipt  3DPrintShapeCornerSimplified.0001.ipt  3DPrintShapeStraightEdge.0004.ipt  3DPrintShapeStraightEdge1.0006.ipt  3DPrintShapeStraightEdge1Simplified.0001.ipt  3DPrintShapeStraightEdge2.0007.ipt  3DPrintShapeV2.0001.ipt  FinalAssemblySimplified.0001.iam  InsertTest.0001.ipt  ScrewTest.0002.ipt
admittance_controller/: CMakeLists.txt  admittance_controller_plugin.xml  package.xml  plot_script.py
admittance_controller/src/: admittance_controller.cpp
contactForceEstimation/: SimulatedTrajectoryMovement.avi  TrajectoryMovement.avi  TrajectoryMovementUR10e.avi  contactAreaEstimation.m  displayTimeAndStatus.m  finalTestTrajectory.avi  forces.txt  forcesCurved.txt  gmm_gmr_traj.csv  gmm_gmr_traj_curved.csv  printElapsedTime.m  tempEstimationMatrix.mat  trial1.csv  trial1_curved.csv  trial2.csv  trial2_curved.csv  trial3.csv  trial3_curved.csv  wrenchCurve.csv  wrenchtop.csv
contactForceEstimation/pointClouds/: objectPointCloud.ply  objectPointCloudSimplifiedTemp.ply
contactForceEstimation/testOnPlane/: planeContactAreaEstimation.m
hybrid_force_pos_controller/: CMakeLists.txt  hybrid_force_pos_controller_plugin.xml  package.xml
hybrid_force_pos_controller/src/: hybrid_force_pos_controller.cpp  test_controller_node.cpp
hybrid_force_pos_controller/srv/: targetTraj.srv
lfd_matlab/: BIC_Criterion_tcp.m  BIC_criterion.m  README.md  filter_design.slx  filter_measurements.m  hybrid_force_pos_controller.slx  lfd_demo.m  lfd_force_estimation.m  lfd_real_data.m  lfd_ur_robot.m  test_inverse_kinematics.m
lfd_matlab/data/: forceData.mat  tcpRobotTrial1.csv  (+9 more)
plot_scripts/: README.md  filtered.py  gmm_plot.m  gmr_test.m  plot_script.py  plot_traj.py  plot_traj_joint.py
robot_listener/: CMakeLists.txt  README.md  package.xml
robot_listener/include/robot_listener/: butterworth_filter.hpp  robot_listener.h
robot_listener/src/: butterworth_filter.cpp  filter.py  robot_listener.cpp
trajectory_learning/: CMakeLists.txt  README.md  bic_script.py  package.xml
trajectory_learning/BIC/: combined.csv  jointtrial1.csv  jointtrial2.csv  jointtrial3.csv  tcptrial1.csv  tcptrial2.csv  tcptrial3.csv
trajectory_learning/demonstrations/: OLDtcptrial1.csv  tcp.csv  tcpCurved.csv  tcptrial1.csv  tcptrial2.csv
trajectory_learning/gmm_model/: cov.txt  means.txt  priors.txt
trajectory_learning/include/trajectory_learning/: demonstrated_trajectories.hpp  gmm_gmr.hpp  gmm_gmr_joint.hpp
trajectory_learning/src/: execute_traj.cpp  gmm_gmr.cpp  gmm_gmr_joint.cpp  gmm_gmr_node.cpp  gmm_gmr_node_joint.cpp
(+5 files in other folders)
